# Copper

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/bui/: Cargo.toml
crates/bui-css/: Cargo.toml
crates/bui-css/src/: lib.rs  parser.rs  selector.rs
crates/bui-dom/: Cargo.toml
crates/bui-dom/src/: lib.rs
crates/bui-gpu/: Cargo.toml
crates/bui-gpu/src/: lib.rs
crates/bui-html/: Cargo.toml
crates/bui-html/src/: lib.rs  tokenizer.rs  tree_builder.rs
crates/bui-image/: Cargo.toml
crates/bui-image/src/: deflate.rs  gif.rs  jpeg.rs  lib.rs  png.rs
crates/bui-js/: Cargo.toml
crates/bui-js/src/: closure_shim.rs  dom_bindings.rs  events.rs  lib.rs
crates/bui-layout/: Cargo.toml
crates/bui-layout/src/: lib.rs  svg.rs
crates/bui-net/: Cargo.toml
crates/bui-net/examples/: pool_timing.rs
crates/bui-net/src/: cookie.rs  lib.rs  request.rs  response.rs
crates/bui-net/tests/: keep_alive.rs
crates/bui-paint/: Cargo.toml
crates/bui-paint/src/: lib.rs  raster.rs
crates/bui-shell/: Cargo.toml
crates/bui-shell/src/: lib.rs
crates/bui-style/: Cargo.toml
crates/bui-style/examples/: cascade_bench.rs
crates/bui-style/src/: lib.rs  media.rs  ua.css  values.rs
crates/bui-text/: Cargo.toml
crates/bui-text/src/: bitmap_data.rs  lib.rs
crates/bui-update/: Cargo.toml
crates/bui-update/examples/: apply_drill.rs
crates/bui-update/src/: github.rs  install.rs  json.rs  lib.rs  version.rs
crates/bui-url/: Cargo.toml
crates/bui-url/src/: lib.rs
crates/bui/src/: address_input.rs  main.rs  png_out.rs  start_page.rs
docs/: README.md  architecture.md  contributing.md  dev-dock.md  google-render-plan.md  js-engine-plan.md  keybindings.md
tools/: gen_bitmap_font.py  google_smoke.sh  mdn_smoke.sh  react_smoke.sh  search_smoke.sh  wiki_header_snapshot.sh
tools/fixtures/react/: counter.html  index.html  preact.html  todo.html
