[package]
name = "bui-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bui-dom = { path = "../bui-dom" }
bui-paint = { path = "../bui-paint" }
bui-style = { path = "../bui-style" }
bui-text = { path = "../bui-text" }

[dev-dependencies]
bui-html = { path = "../bui-html" }
bui-css = { path = "../bui-css" }

[lints]
workspace = true
