[package]
name = "bui-net"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bui-url = { path = "../bui-url" }
tokio = { version = "1", features = ["net", "io-util", "time", "rt"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "1"
thiserror = "2"

[lints]
workspace = true
